# llm-translate

./: .env.example  .gitignore  AGENTS.md  CHATGPT_INTEGRATION_SUMMARY.md  LLMTranslate.spec  LLMTranslateFixed.spec  README.md  build_windows_exe.ps1  chatgpt_auth_example.py  launcher.py  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements-gui.txt  requirements-web-full.txt  requirements-web.txt  requirements.txt  translate.bat  translate_simple.bat
docs/: DESIGN-V1.0.md  PLAN-V1.0.md  PRD-V1.0.md  architecture.md  docx-parse.md  epub-parse.md  epub-structure.md  gui-extension-architecture.md  gui-quickstart.md  html-parse.md  html-requirement.md  installation-guide.md  ipynb-translate-impl.md  latex-format-design.md  pdf-parse.md  srt-format-design.md  vtt-format-design.md
fixtures/: glossary.csv  sample.html  sample.ipynb  sample.md  sample.txt
fixtures/downloaded_formats/: sample.tex
llm_translate/: __init__.py  batching.py  chunking.py  cli.py  config.py  domain.py  exporter.py  exporter_docx.py  pdf_cleanliness.py  prompt.py  protection.py  service.py  storage.py  validation.py  validators_docx.py
llm_translate/exporters/: __init__.py  docx_format_preserving_exporter.py  pdf_exporters.py  pdf_format_preserving_exporter.py
llm_translate/formats/: __init__.py  base.py  docx.py  epub.py  html.py  ipynb.py  latex.py  markdown.py  pdf.py  plain_text.py  registry.py  subtitle.py
llm_translate/gui/: __init__.py  main.py  settings.py  workers.py
llm_translate/html_utils/: __init__.py  extractor.py  fetcher.py  structure.py
llm_translate/llm/: __init__.py  base.py
llm_translate/parser/: __init__.py  docx.py  epub.py  html.py  ipynb.py  markdown.py  pdf.py
llm_translate/pdf_utils/: __init__.py  cross_page.py  filters.py  layout.py  quality.py  tables.py
llm_translate/web/: __init__.py  app.py
llm_translate/web/static/: app.js  index.html  styles.css
tests/: test_batching_example.py  test_docx_exporter.py  test_docx_parser.py  test_docx_pipeline.py  test_docx_protection_chunking.py  test_docx_validator.py  test_epub_pipeline.py  test_html_extractor.py  test_html_pipeline.py  test_ipynb_pipeline.py  test_latex_pipeline.py  test_pdf_cleanliness.py  test_pipeline.py  test_plain_text_pipeline.py  test_subtitle_pipeline.py  test_web_dashboard.py
