[project]
name = "llm-translate"
version = "0.1.0"
description = "Recoverable structured long-document translation workflow."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "EbookLib>=0.18",
  "html5lib>=1.1",
  "litellm>=1.0.0",
  "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
llm-translate = "llm_translate.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["llm_translate*"]
