[project]
name = "llm-translate"
version = "0.1.0"
description = "Recoverable structured long-document translation workflow."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "EbookLib>=0.18",
  "html5lib>=1.1",
  "litellm>=1.0.0",
  "pdfplumber>=0.11.0",
  "pymupdf>=1.24.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "python-dotenv>=1.0.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "reportlab>=4.0.0",
  "sqlalchemy>=2.0.0",
  "trafilatura>=1.6.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.21.0",
  "black>=22.0.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "mypy>=1.0.0",
  "pre-commit>=3.0.0",
  "httpx>=0.24.0",
]
playwright = [
  "playwright>=1.40.0",
]
gui = [
  "PySide6>=6.7.0",
  "pyinstaller>=6.0.0",
]
web = [
  "fastapi>=0.68.0",
  "uvicorn>=0.15.0",
  "websockets>=11.0.0",
]
web-full = [
  "fastapi>=0.68.0",
  "uvicorn>=0.15.0",
  "websockets>=11.0.0",
  "jinja2>=3.0.0",
  "python-multipart>=0.0.0",
  "aiofiles>=0.8.0",
]

[project.scripts]
llm-translate = "llm_translate.cli:main"
llm-translate-gui = "llm_translate.gui.main:launch_gui"
llm-translate-web = "llm_translate.web.app:run_web_server"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["llm_translate*"]
